================================
2009-10-14 18:00:18 -0400 v1_162
================================

  commit 65682a45ea5d0ecd93625389e4fe2372334bd3f7
  Author: Rocco Caputo <rcaputo@cpan.org>
  Date:   Wed Oct 14 18:00:18 2009 -0400
  
    A test was failing rather than skipping due to insufficient
    privileges. 

================================
2009-09-12 18:56:44 -0400 v1_161
================================

  commit 850b00fc1e9f70833ab36ac13a2b38d134e2c6af
  Author: Rocco Caputo <rcaputo@cpan.org>
  Date:   Sat Sep 12 18:56:44 2009 -0400
  
    Standardize layout and prepare for next release.

  commit 420df6d9d9345a5ed294eb4fec88bf14d8a41266
  Author: Rocco Caputo <rcaputo@cpan.org>
  Date:   Sat Sep 12 18:48:25 2009 -0400
  
    Add test for timeouts inflating retried response times.

  commit 6cd8830b9f822296ecbe7db0633502d9cf4e3195
  Author: Ralph Schmitt <ralph.schmitt@ish.de>
  Date:   Sat Sep 12 18:14:32 2009 -0400
  
    Compensate for timeout when retrying.

    Ralph Schmitt discovered that the response time each retry would
    increase by the timeout period. He provided this change to
    compensate.

  commit 1ed1c1da115bbd7b8e63eff439225c5fe6d664ff
  Author: Rocco Caputo <rcaputo@cpan.org>
  Date:   Sat Sep 12 17:12:28 2009 -0400
  
    Convert files and release workflow from svn to git. 

================================
2009-07-28 06:31:09 +0000 v1_160
================================

  commit 96f372e227aa190a221394805eb9d6ae76fdb7ee
  Author: Rocco Caputo <rcaputo@cpan.org>
  Date:   Tue Jul 28 06:31:09 2009 +0000
  
    Use latest POE, and prepare for a new release.

  commit 24380582236a0354365aa68d0709e5340c52abff
  Author: Rocco Caputo <rcaputo@cpan.org>
  Date:   Mon Jul 27 04:56:40 2009 +0000
  
    Added a machine-readable repository directory to the distribution.
    Documented the bug tracker, repository, and other resource URLs. 

===============================
2009-07-25 17:26:55 +0000 v1_15
===============================
