@@ -3,6 +3,7 @@ MANIFEST
 Makefile.PL
 lib/POE/Component/Client/Ping.pm
 README
+t/00_info.t
 t/01_ping.t
 t/02_arbitrary_data.t
 t/03_provided_socket.t
